// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|Header/DesktopTopHeader Default 1`] = `
.c0 {
  display: none;
}

.c1 {
  width: 1000px;
  height: 62px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 965px;
  height: 62px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: calc(100% - 20px);
  margin: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-left: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: calc(100% - 20px);
  margin: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  margin-right: 0;
  padding: 0 7px;
}

.c4 {
  fill: #FFF;
  width: 96px;
  height: 16px;
}

.c8 {
  width: 1000px;
  z-index: 9910;
  overflow: hidden;
  position: fixed;
  top: 0;
  bottom: 0;
  visibility: hidden;
  -webkit-transition: visibility 0s 0.4s;
  transition: visibility 0s 0.4s;
}

.c7 {
  background: #1d1d20;
  opacity: 0.75;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 9900;
  visibility: hidden;
  -webkit-transition: visibility 0s 0.4s;
  transition: visibility 0s 0.4s;
}

.c9 {
  overflow: auto;
  padding: 40px 0 20px;
  -webkit-overflow-scrolling: touch;
  max-height: calc(100vh - 154px);
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10:first-of-type {
  margin-bottom: 40px;
}

.c10:last-of-type {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c11 {
  line-height: 1.5;
  cursor: pointer;
  border-bottom: 2.4px solid #2F2F36;
  margin: 2px 0;
  font-size: 20px;
  -webkit-transition: border 200ms ease-in-out;
  transition: border 200ms ease-in-out;
}

.c11 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c11:hover {
  border-bottom: 2.4px solid #FFF;
}

.c11:first-of-type {
  border-top: 2.4px solid #2F2F36;
}

.c11 a {
  padding: 22px 0 27px;
}

.c12 {
  line-height: 1.5;
  cursor: pointer;
  padding: 0;
  margin: 10px 0;
  -webkit-transition: border 400ms;
  transition: border 400ms;
  border-bottom: 1px solid transparent;
  display: inline-block;
}

.c12 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c12:hover {
  border-bottom: 1px solid #FFF;
}

@media (min-width:1040px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    border-bottom: solid 2px #1d1d20;
    width: 100%;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "padding": null,
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className="c2"
          >
            <a
              className="c3"
              href="/"
              onClick={[Function]}
            >
              <schemaLogo.svg
                className="c4"
                id="desktopTopHeaderSchemaLogo"
              />
            </a>
            <div
              className="c5"
            >
              <button
                disabled={false}
                id="desktopTopHeaderLogoutBtn"
                onClick={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "border": "none",
                    "borderRadius": null,
                    "color": "#FFF",
                    "cursor": "pointer",
                    "display": "flex",
                    "fill": "#FFF",
                    "fontSize": "18px",
                    "height": "calc(100% - 20px)",
                    "margin": "6px 0 10px 10px",
                    "minHeight": "48px",
                    "outline": "none",
                    "padding": "0 7px",
                    "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                  }
                }
              >
                <svg
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": 21,
                      "width": 24,
                    }
                  }
                  viewBox="0 0 24 21"
                >
                  <path
                    d="M0 0h15v6h-1V1H1v19h13v-5h1v6H0z"
                  />
                  <path
                    d="M8 10h15v1H8z"
                  />
                  <path
                    d="M24 10.5L19 6l-.5 1 4 3.5-4 3.5.5 1z"
                  />
                </svg>
              </button>
              <a
                className="c6"
                href="/settings"
                onClick={[Function]}
              >
                <svg
                  id="desktopTopHeaderSettingsBtn"
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": "28px",
                      "width": "28px",
                    }
                  }
                  viewBox="0 0 28 28"
                >
                  <defs>
                    <path
                      d="M0 0h24.034v24.034H0z"
                      id="user_svg__a"
                    />
                  </defs>
                  <g
                    fillRule="evenodd"
                    transform="translate(1.867 1.867)"
                  >
                    <mask
                      fill="#fff"
                      id="user_svg__b"
                    >
                      <use
                        xlinkHref="#user_svg__a"
                      />
                    </mask>
                    <path
                      d="M4.138 19.57c1.38-.552 2.677-1.04 3.948-1.588 1.495-.646 1.735-1.708.889-3.134-.632-1.065-1.361-2.162-1.616-3.34-.284-1.311-.117-2.73-.081-4.1.068-2.682 1.755-4.263 4.561-4.268 2.074-.004 5.335 1.606 5.025 4.192-.274 2.283.356 4.774-1.347 6.785-.193.229-.308.523-.474.777-.886 1.37-.568 2.463.95 3.104 1.273.537 2.566 1.029 3.863 1.545 4.067-3.565 4.198-10.59.257-14.93C15.993.079 8.887-.158 4.432 4.09.044 8.275-.1 15.32 4.138 19.57M0 11.9C.053 5.289 5.524-.063 12.165 0c6.606.064 11.94 5.543 11.868 12.195-.07 6.542-5.517 11.874-12.098 11.84C5.326 24-.052 18.531 0 11.9"
                      mask="url(#user_svg__b)"
                    />
                  </g>
                </svg>
              </a>
            </div>
          </div>
        </div>
        <button
          disabled={false}
          id="desktopTopHeaderOpenMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "flex": "0 0 auto",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": null,
              "right": 0,
              "top": 6,
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 10 60"
          >
            <path
              d="M5 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        className="c7"
        onClick={[Function]}
      />
      <div
        className="c8"
        onClick={[Function]}
      >
        <div
          style={
            Object {
              "backgroundColor": "#000",
              "color": "#FFF",
              "maxWidth": 595,
              "minHeight": null,
              "padding": 50,
              "position": "absolute",
              "right": 0,
              "textAlign": "left",
              "top": 0,
              "transform": "translateX(100%)",
              "transition": "transform 0.4s cubic-bezier(0.86, 0, 0.07, 1), visibility 0s 0.4s",
              "visibility": 0,
              "width": "100%",
              "zIndex": 9999,
            }
          }
        >
          <h2
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 100,
                "margin": 0,
              }
            }
          >
            <span>
              Schema CMS
            </span>
          </h2>
          <h1
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
              }
            }
          >
            <span>
              Menu
            </span>
          </h1>
          <div
            className="c9"
            onClick={[Function]}
          >
            <div
              className="c10"
            >
              <div
                className="c11"
              >
                <a
                  href="/project"
                  id="projectsNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    Projects
                  </span>
                </a>
              </div>
            </div>
            <div
              className="c10"
            >
              <div
                className="c12"
              >
                <a
                  href="/"
                  id="aboutNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    About Schema CMS
                  </span>
                </a>
              </div>
              <div
                className="c12"
              >
                <a
                  href="/"
                  id="apiNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    API Doc
                  </span>
                </a>
              </div>
              <div
                className="c12"
              >
                <a
                  href="/"
                  id="repositoryNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    GitHub Repository
                  </span>
                </a>
              </div>
            </div>
          </div>
          <button
            disabled={false}
            id="desktopTopHeaderCloseMenuButton"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "position": "absolute",
                "right": 44,
                "top": 44,
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Header/DesktopTopHeader No user 1`] = `
.c0 {
  display: none;
}

.c1 {
  width: 1000px;
  height: 62px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: calc(100% - 20px);
  margin: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-left: 0;
}

.c3 {
  fill: #FFF;
  width: 96px;
  height: 16px;
}

.c5 {
  width: 1000px;
  z-index: 9910;
  overflow: hidden;
  position: fixed;
  top: 0;
  bottom: 0;
  visibility: hidden;
  -webkit-transition: visibility 0s 0.4s;
  transition: visibility 0s 0.4s;
}

.c4 {
  background: #1d1d20;
  opacity: 0.75;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 9900;
  visibility: hidden;
  -webkit-transition: visibility 0s 0.4s;
  transition: visibility 0s 0.4s;
}

.c6 {
  overflow: auto;
  padding: 40px 0 20px;
  -webkit-overflow-scrolling: touch;
  max-height: calc(100vh - 154px);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7:first-of-type {
  margin-bottom: 40px;
}

.c7:last-of-type {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c8 {
  line-height: 1.5;
  cursor: pointer;
  border-bottom: 2.4px solid #2F2F36;
  margin: 2px 0;
  font-size: 20px;
  -webkit-transition: border 200ms ease-in-out;
  transition: border 200ms ease-in-out;
}

.c8 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c8:hover {
  border-bottom: 2.4px solid #FFF;
}

.c8:first-of-type {
  border-top: 2.4px solid #2F2F36;
}

.c8 a {
  padding: 22px 0 27px;
}

.c9 {
  line-height: 1.5;
  cursor: pointer;
  padding: 0;
  margin: 10px 0;
  -webkit-transition: border 400ms;
  transition: border 400ms;
  border-bottom: 1px solid transparent;
  display: inline-block;
}

.c9 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c9:hover {
  border-bottom: 1px solid #FFF;
}

@media (min-width:1040px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    border-bottom: solid 2px #1d1d20;
    width: 100%;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <a
        className="c2"
        href="/"
        onClick={[Function]}
      >
        <schemaLogo.svg
          className="c3"
          id="desktopTopHeaderSchemaLogo"
        />
      </a>
      <div
        className="c4"
        onClick={[Function]}
      />
      <div
        className="c5"
        onClick={[Function]}
      >
        <div
          style={
            Object {
              "backgroundColor": "#000",
              "color": "#FFF",
              "maxWidth": 595,
              "minHeight": null,
              "padding": 50,
              "position": "absolute",
              "right": 0,
              "textAlign": "left",
              "top": 0,
              "transform": "translateX(100%)",
              "transition": "transform 0.4s cubic-bezier(0.86, 0, 0.07, 1), visibility 0s 0.4s",
              "visibility": 0,
              "width": "100%",
              "zIndex": 9999,
            }
          }
        >
          <h2
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 100,
                "margin": 0,
              }
            }
          >
            <span>
              Schema CMS
            </span>
          </h2>
          <h1
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
              }
            }
          >
            <span>
              Menu
            </span>
          </h1>
          <div
            className="c6"
            onClick={[Function]}
          >
            <div
              className="c7"
            >
              <div
                className="c8"
              >
                <a
                  href="/project"
                  id="projectsNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    Projects
                  </span>
                </a>
              </div>
              <div
                className="c8"
              >
                <a
                  href="/user"
                  id="usersPageNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    Users
                  </span>
                </a>
              </div>
            </div>
            <div
              className="c7"
            >
              <div
                className="c9"
              >
                <a
                  href="/"
                  id="aboutNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    About Schema CMS
                  </span>
                </a>
              </div>
              <div
                className="c9"
              >
                <a
                  href="/"
                  id="apiNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    API Doc
                  </span>
                </a>
              </div>
              <div
                className="c9"
              >
                <a
                  href="/"
                  id="repositoryNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    GitHub Repository
                  </span>
                </a>
              </div>
            </div>
          </div>
          <button
            disabled={false}
            id="desktopTopHeaderCloseMenuButton"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "position": "absolute",
                "right": 44,
                "top": 44,
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Header/DesktopTopHeader With long title 1`] = `
.c0 {
  display: none;
}

.c1 {
  width: 1000px;
  height: 62px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 965px;
  height: 62px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: calc(100% - 20px);
  margin: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-left: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: calc(100% - 20px);
  margin: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  margin-right: 0;
  padding: 0 7px;
}

.c4 {
  fill: #FFF;
  width: 96px;
  height: 16px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 10px;
  overflow: hidden;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c10 {
  width: 1000px;
  z-index: 9910;
  overflow: hidden;
  position: fixed;
  top: 0;
  bottom: 0;
  visibility: hidden;
  -webkit-transition: visibility 0s 0.4s;
  transition: visibility 0s 0.4s;
}

.c9 {
  background: #1d1d20;
  opacity: 0.75;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 9900;
  visibility: hidden;
  -webkit-transition: visibility 0s 0.4s;
  transition: visibility 0s 0.4s;
}

.c11 {
  overflow: auto;
  padding: 40px 0 20px;
  -webkit-overflow-scrolling: touch;
  max-height: calc(100vh - 154px);
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12:first-of-type {
  margin-bottom: 40px;
}

.c12:last-of-type {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c13 {
  line-height: 1.5;
  cursor: pointer;
  border-bottom: 2.4px solid #2F2F36;
  margin: 2px 0;
  font-size: 20px;
  -webkit-transition: border 200ms ease-in-out;
  transition: border 200ms ease-in-out;
}

.c13 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c13:hover {
  border-bottom: 2.4px solid #FFF;
}

.c13:first-of-type {
  border-top: 2.4px solid #2F2F36;
}

.c13 a {
  padding: 22px 0 27px;
}

.c14 {
  line-height: 1.5;
  cursor: pointer;
  padding: 0;
  margin: 10px 0;
  -webkit-transition: border 400ms;
  transition: border 400ms;
  border-bottom: 1px solid transparent;
  display: inline-block;
}

.c14 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c14:hover {
  border-bottom: 1px solid #FFF;
}

@media (min-width:1040px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    border-bottom: solid 2px #1d1d20;
    width: 100%;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "padding": null,
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className="c2"
          >
            <a
              className="c3"
              href="/"
              onClick={[Function]}
            >
              <schemaLogo.svg
                className="c4"
                id="desktopTopHeaderSchemaLogo"
              />
            </a>
            <div
              className="c5"
            >
              <h1
                className="c6"
                id="desktopTopHeaderProjectTitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 600,
                    "letterSpacing": "-0.12px",
                    "lineHight": 1.25,
                    "margin": 0,
                  }
                }
                title="
  Mauris egestas arcu nec diam consectetur vulputate.
  Mauris rhoncus a massa in ultricies. In vel accumsan tortor.
  Donec suscipit commodo enim. Suspendisse nibh odio
"
              >
                
  Mauris egestas arcu nec diam consectetur vulputate.
  Mauris rhoncus a massa in ultricies. In vel accumsan tortor.
  Donec suscipit commodo enim. Suspendisse nibh odio

              </h1>
            </div>
            <div
              className="c7"
            >
              <button
                disabled={false}
                id="desktopTopHeaderLogoutBtn"
                onClick={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "border": "none",
                    "borderRadius": null,
                    "color": "#FFF",
                    "cursor": "pointer",
                    "display": "flex",
                    "fill": "#FFF",
                    "fontSize": "18px",
                    "height": "calc(100% - 20px)",
                    "margin": "6px 0 10px 10px",
                    "minHeight": "48px",
                    "outline": "none",
                    "padding": "0 7px",
                    "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                  }
                }
              >
                <svg
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": 21,
                      "width": 24,
                    }
                  }
                  viewBox="0 0 24 21"
                >
                  <path
                    d="M0 0h15v6h-1V1H1v19h13v-5h1v6H0z"
                  />
                  <path
                    d="M8 10h15v1H8z"
                  />
                  <path
                    d="M24 10.5L19 6l-.5 1 4 3.5-4 3.5.5 1z"
                  />
                </svg>
              </button>
              <a
                className="c8"
                href="/settings"
                onClick={[Function]}
              >
                <svg
                  id="desktopTopHeaderSettingsBtn"
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": "28px",
                      "width": "28px",
                    }
                  }
                  viewBox="0 0 28 28"
                >
                  <defs>
                    <path
                      d="M0 0h24.034v24.034H0z"
                      id="user_svg__a"
                    />
                  </defs>
                  <g
                    fillRule="evenodd"
                    transform="translate(1.867 1.867)"
                  >
                    <mask
                      fill="#fff"
                      id="user_svg__b"
                    >
                      <use
                        xlinkHref="#user_svg__a"
                      />
                    </mask>
                    <path
                      d="M4.138 19.57c1.38-.552 2.677-1.04 3.948-1.588 1.495-.646 1.735-1.708.889-3.134-.632-1.065-1.361-2.162-1.616-3.34-.284-1.311-.117-2.73-.081-4.1.068-2.682 1.755-4.263 4.561-4.268 2.074-.004 5.335 1.606 5.025 4.192-.274 2.283.356 4.774-1.347 6.785-.193.229-.308.523-.474.777-.886 1.37-.568 2.463.95 3.104 1.273.537 2.566 1.029 3.863 1.545 4.067-3.565 4.198-10.59.257-14.93C15.993.079 8.887-.158 4.432 4.09.044 8.275-.1 15.32 4.138 19.57M0 11.9C.053 5.289 5.524-.063 12.165 0c6.606.064 11.94 5.543 11.868 12.195-.07 6.542-5.517 11.874-12.098 11.84C5.326 24-.052 18.531 0 11.9"
                      mask="url(#user_svg__b)"
                    />
                  </g>
                </svg>
              </a>
            </div>
          </div>
        </div>
        <button
          disabled={false}
          id="desktopTopHeaderOpenMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "flex": "0 0 auto",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": null,
              "right": 0,
              "top": 6,
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 10 60"
          >
            <path
              d="M5 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        className="c9"
        onClick={[Function]}
      />
      <div
        className="c10"
        onClick={[Function]}
      >
        <div
          style={
            Object {
              "backgroundColor": "#000",
              "color": "#FFF",
              "maxWidth": 595,
              "minHeight": null,
              "padding": 50,
              "position": "absolute",
              "right": 0,
              "textAlign": "left",
              "top": 0,
              "transform": "translateX(100%)",
              "transition": "transform 0.4s cubic-bezier(0.86, 0, 0.07, 1), visibility 0s 0.4s",
              "visibility": 0,
              "width": "100%",
              "zIndex": 9999,
            }
          }
        >
          <h2
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 100,
                "margin": 0,
              }
            }
          >
            <span>
              Schema CMS
            </span>
          </h2>
          <h1
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
              }
            }
          >
            <span>
              Menu
            </span>
          </h1>
          <div
            className="c11"
            onClick={[Function]}
          >
            <div
              className="c12"
            >
              <div
                className="c13"
              >
                <a
                  href="/project"
                  id="projectsNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    Projects
                  </span>
                </a>
              </div>
            </div>
            <div
              className="c12"
            >
              <div
                className="c14"
              >
                <a
                  href="/"
                  id="aboutNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    About Schema CMS
                  </span>
                </a>
              </div>
              <div
                className="c14"
              >
                <a
                  href="/"
                  id="apiNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    API Doc
                  </span>
                </a>
              </div>
              <div
                className="c14"
              >
                <a
                  href="/"
                  id="repositoryNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    GitHub Repository
                  </span>
                </a>
              </div>
            </div>
          </div>
          <button
            disabled={false}
            id="desktopTopHeaderCloseMenuButton"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "position": "absolute",
                "right": 44,
                "top": 44,
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Header/DesktopTopHeader With title 1`] = `
.c0 {
  display: none;
}

.c1 {
  width: 1000px;
  height: 62px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 965px;
  height: 62px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: calc(100% - 20px);
  margin: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-left: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: calc(100% - 20px);
  margin: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  margin-right: 0;
  padding: 0 7px;
}

.c4 {
  fill: #FFF;
  width: 96px;
  height: 16px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 10px;
  overflow: hidden;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c10 {
  width: 1000px;
  z-index: 9910;
  overflow: hidden;
  position: fixed;
  top: 0;
  bottom: 0;
  visibility: hidden;
  -webkit-transition: visibility 0s 0.4s;
  transition: visibility 0s 0.4s;
}

.c9 {
  background: #1d1d20;
  opacity: 0.75;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 9900;
  visibility: hidden;
  -webkit-transition: visibility 0s 0.4s;
  transition: visibility 0s 0.4s;
}

.c11 {
  overflow: auto;
  padding: 40px 0 20px;
  -webkit-overflow-scrolling: touch;
  max-height: calc(100vh - 154px);
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12:first-of-type {
  margin-bottom: 40px;
}

.c12:last-of-type {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c13 {
  line-height: 1.5;
  cursor: pointer;
  border-bottom: 2.4px solid #2F2F36;
  margin: 2px 0;
  font-size: 20px;
  -webkit-transition: border 200ms ease-in-out;
  transition: border 200ms ease-in-out;
}

.c13 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c13:hover {
  border-bottom: 2.4px solid #FFF;
}

.c13:first-of-type {
  border-top: 2.4px solid #2F2F36;
}

.c13 a {
  padding: 22px 0 27px;
}

.c14 {
  line-height: 1.5;
  cursor: pointer;
  padding: 0;
  margin: 10px 0;
  -webkit-transition: border 400ms;
  transition: border 400ms;
  border-bottom: 1px solid transparent;
  display: inline-block;
}

.c14 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c14:hover {
  border-bottom: 1px solid #FFF;
}

@media (min-width:1040px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    border-bottom: solid 2px #1d1d20;
    width: 100%;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "padding": null,
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className="c2"
          >
            <a
              className="c3"
              href="/"
              onClick={[Function]}
            >
              <schemaLogo.svg
                className="c4"
                id="desktopTopHeaderSchemaLogo"
              />
            </a>
            <div
              className="c5"
            >
              <h1
                className="c6"
                id="desktopTopHeaderProjectTitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 600,
                    "letterSpacing": "-0.12px",
                    "lineHight": 1.25,
                    "margin": 0,
                  }
                }
                title="Projects"
              >
                Projects
              </h1>
            </div>
            <div
              className="c7"
            >
              <button
                disabled={false}
                id="desktopTopHeaderLogoutBtn"
                onClick={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "border": "none",
                    "borderRadius": null,
                    "color": "#FFF",
                    "cursor": "pointer",
                    "display": "flex",
                    "fill": "#FFF",
                    "fontSize": "18px",
                    "height": "calc(100% - 20px)",
                    "margin": "6px 0 10px 10px",
                    "minHeight": "48px",
                    "outline": "none",
                    "padding": "0 7px",
                    "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                  }
                }
              >
                <svg
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": 21,
                      "width": 24,
                    }
                  }
                  viewBox="0 0 24 21"
                >
                  <path
                    d="M0 0h15v6h-1V1H1v19h13v-5h1v6H0z"
                  />
                  <path
                    d="M8 10h15v1H8z"
                  />
                  <path
                    d="M24 10.5L19 6l-.5 1 4 3.5-4 3.5.5 1z"
                  />
                </svg>
              </button>
              <a
                className="c8"
                href="/settings"
                onClick={[Function]}
              >
                <svg
                  id="desktopTopHeaderSettingsBtn"
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": "28px",
                      "width": "28px",
                    }
                  }
                  viewBox="0 0 28 28"
                >
                  <defs>
                    <path
                      d="M0 0h24.034v24.034H0z"
                      id="user_svg__a"
                    />
                  </defs>
                  <g
                    fillRule="evenodd"
                    transform="translate(1.867 1.867)"
                  >
                    <mask
                      fill="#fff"
                      id="user_svg__b"
                    >
                      <use
                        xlinkHref="#user_svg__a"
                      />
                    </mask>
                    <path
                      d="M4.138 19.57c1.38-.552 2.677-1.04 3.948-1.588 1.495-.646 1.735-1.708.889-3.134-.632-1.065-1.361-2.162-1.616-3.34-.284-1.311-.117-2.73-.081-4.1.068-2.682 1.755-4.263 4.561-4.268 2.074-.004 5.335 1.606 5.025 4.192-.274 2.283.356 4.774-1.347 6.785-.193.229-.308.523-.474.777-.886 1.37-.568 2.463.95 3.104 1.273.537 2.566 1.029 3.863 1.545 4.067-3.565 4.198-10.59.257-14.93C15.993.079 8.887-.158 4.432 4.09.044 8.275-.1 15.32 4.138 19.57M0 11.9C.053 5.289 5.524-.063 12.165 0c6.606.064 11.94 5.543 11.868 12.195-.07 6.542-5.517 11.874-12.098 11.84C5.326 24-.052 18.531 0 11.9"
                      mask="url(#user_svg__b)"
                    />
                  </g>
                </svg>
              </a>
            </div>
          </div>
        </div>
        <button
          disabled={false}
          id="desktopTopHeaderOpenMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "flex": "0 0 auto",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": null,
              "right": 0,
              "top": 6,
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 10 60"
          >
            <path
              d="M5 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        className="c9"
        onClick={[Function]}
      />
      <div
        className="c10"
        onClick={[Function]}
      >
        <div
          style={
            Object {
              "backgroundColor": "#000",
              "color": "#FFF",
              "maxWidth": 595,
              "minHeight": null,
              "padding": 50,
              "position": "absolute",
              "right": 0,
              "textAlign": "left",
              "top": 0,
              "transform": "translateX(100%)",
              "transition": "transform 0.4s cubic-bezier(0.86, 0, 0.07, 1), visibility 0s 0.4s",
              "visibility": 0,
              "width": "100%",
              "zIndex": 9999,
            }
          }
        >
          <h2
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 100,
                "margin": 0,
              }
            }
          >
            <span>
              Schema CMS
            </span>
          </h2>
          <h1
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
              }
            }
          >
            <span>
              Menu
            </span>
          </h1>
          <div
            className="c11"
            onClick={[Function]}
          >
            <div
              className="c12"
            >
              <div
                className="c13"
              >
                <a
                  href="/project"
                  id="projectsNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    Projects
                  </span>
                </a>
              </div>
              <div
                className="c13"
              >
                <a
                  href="/user"
                  id="usersPageNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    Users
                  </span>
                </a>
              </div>
            </div>
            <div
              className="c12"
            >
              <div
                className="c14"
              >
                <a
                  href="/"
                  id="aboutNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    About Schema CMS
                  </span>
                </a>
              </div>
              <div
                className="c14"
              >
                <a
                  href="/"
                  id="apiNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    API Doc
                  </span>
                </a>
              </div>
              <div
                className="c14"
              >
                <a
                  href="/"
                  id="repositoryNavBtn"
                  onClick={[Function]}
                >
                  <span>
                    GitHub Repository
                  </span>
                </a>
              </div>
            </div>
          </div>
          <button
            disabled={false}
            id="desktopTopHeaderCloseMenuButton"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "position": "absolute",
                "right": 44,
                "top": 44,
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
